Add careers page

--- a/careers.html
+++ b/careers.html
@@ -70,58 +70,51 @@
 
     <!-- SITE HEADER END -->
 
-
     <!-- SITE MAIN START -->
     <main class="site-main">
 
-        <section class="hero-about">
-            <div class="hero-about__top">
-                <div class="container">
-                    <h2 class="hero-about__toptext">About</h2>
-                </div>
+        <div class="intro">
 
-            </div>
+        </div>
+
+
+        <section class="info info--care">
             <div class="container">
-                <div class="hero-about__box">
-                    <ul class="hero-about__list">
-                        <li class="hero-about__item">
-                            <div class="hero-about__textbox">
-                                <h3 class="hero-about__theme">
-                                    Mobility for the digital era
-                                </h3>
-                                <p class="hero-about__info">
-                                    Getting around should be simple (and even fun!) for everyone. We embrace technology
-                                    to provide low cost, smart access to scooters at your fingertips.
-                                </p>
-                            </div>
-                            <span class="hero-about__img">
+                <div class="info__item info__item--easy">
+                    <div class="info__item-box">
+                        <h2 class="info__topic">
+                            <a class="info__link" href="#">
+                                Care to join our mission?
+                            </a>
+                        </h2>
 
-                            </span>
+                        <p class="info__text">
+                            We’re always looking for ambitious individuals to help us on our journey. If you’re
+                            passionate about our mission to provide clean, accessible transport to improve urban living
+                            we want to hear from you!
+                        </p>
 
-                        </li>
-                        <li class="hero-about__item">
-                            <span class="hero-about__img hero-about__img--better">
+                        <a class="info__link-more" href="#">
+                            Say Hello
+                        </a>
 
-                            </span>
-                            <div class="hero-about__textbox">
-                                <h3 class="hero-about__theme">
-                                    Better urban living
-                                </h3>
-                                <p class="hero-about__info">
-                                    We’re helping connect cities and bring people closer together. Our scooters are also
-                                    fully-electric and we offset the minimal carbon footprint for each ride.
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
+                    </div>
+                    <div class="info__img-box info__img-box--easy">
+                        <img class="info__img" src="./images/career.png" width="445" height="445"
+                            alt="boy looking at his phone" srcset="./images/career.png 1x, ./images/career@2x.png 2x">
+                    </div>
                 </div>
             </div>
         </section>
 
+        <!-- info section finish  -->
+
+
+        <!-- join section start  -->
         <section class="our-values">
             <div class="container">
                 <div class="our-values__box">
-                    <h2 class="our-values__theme">Our values</h2>
+                    <h2 class="our-values__theme">Why join us?</h2>
 
                     <ul class="our-values__list">
                         <li class="our-values__item">
@@ -165,102 +158,110 @@
             </div>
         </section>
 
-        <section class="faq">
+        <!-- join section finish  -->
+
+        <!-- job section start  -->
+
+        <section class="jobs">
             <div class="container">
-                <div class="faq__box">
-                    <h2 class="faq__theme">FAQs</h2>
+                <ul class="jobs__list">
 
-                    <div class="faq__how">
-                        <h3 class="faq__minitheme">How it works
-                        </h3>
-
-                        <div class="faq__detailsbox">
-                            <details class="faq__list" open>
-                                <summary class="faq__item">How do I download the app?</summary>
-
-                                <div class="faq__minibox">
-                                    <p class="faq__minitext">
-                                        To download the Scoot app, you can search “Scoot” in both the App and Google
-                                        Play stores. An even simpler way to do it would be to click the relevant link at
-                                        the bottom of this page and you’ll be re-directed to the correct page.
-                                    </p>
-                                </div>
-
-                            </details>
-                            <details class="faq__list">
-                                <summary class="faq__item">Can I find a nearby Scoots?</summary>
-
-                                <div class="faq__minibox">
-                                    <p class="faq__minitext">
-                                        To download the Scoot app, you can search “Scoot” in both the App and Google
-                                        Play stores. An even simpler way to do it would be to click the relevant link at
-                                        the bottom of this page and you’ll be re-directed to the correct page.
-                                    </p>
-                                </div>
-
-                            </details>
-                            <details class="faq__list">
-                                <summary class="faq__item">Do I need a license to ride?</summary>
-
-                                <div class="faq__minibox">
-                                    <p class="faq__minitext">
-                                        To download the Scoot app, you can search “Scoot” in both the App and Google
-                                        Play stores. An even simpler way to do it would be to click the relevant link at
-                                        the bottom of this page and you’ll be re-directed to the correct page.
-                                    </p>
-                                </div>
-
-                            </details>
+                    <li class="jobs__item">
+                        <div class="jobs__content">
+                            <h4 class="jobs__topic">
+                                General Manager
+                            </h4>
+                            <address class="jobs__text">
+                                Jakarta, Indonesia
+                            </address>
                         </div>
 
-                    </div>
-                    <div class="faq__how">
-                        <h3 class="faq__minitheme">Safe driving
-                        </h3>
+                        <a class="jobs__link" href="#">
+                            Apply
+                        </a>
+                    </li>
 
-                        <div class="faq__detailsbox">
-                            <details class="faq__list" open>
-                                <summary class="faq__item">Should I wear a helmet?</summary>
-
-                                <div class="faq__minibox">
-                                    <p class="faq__minitext">
-                                        Yes, please do! All cities have different laws. But we strongly strongly
-                                        strongly recommend always wearing a helmet regardless of the local laws. We like
-                                        you and we want you to be as safe as possible while Scooting.
-                                    </p>
-                                </div>
-
-                            </details>
-                            <details class="faq__list">
-                                <summary class="faq__item">How about the rules & regulations?</summary>
-
-                                <div class="faq__minibox">
-                                    <p class="faq__minitext">
-                                        To download the Scoot app, you can search “Scoot” in both the App and Google
-                                        Play stores. An even simpler way to do it would be to click the relevant link at
-                                        the bottom of this page and you’ll be re-directed to the correct page.
-                                    </p>
-                                </div>
-
-                            </details>
-                            <details class="faq__list">
-                                <summary class="faq__item">What if I damage my Scoot?</summary>
-
-                                <div class="faq__minibox">
-                                    <p class="faq__minitext">
-                                        To download the Scoot app, you can search “Scoot” in both the App and Google
-                                        Play stores. An even simpler way to do it would be to click the relevant link at
-                                        the bottom of this page and you’ll be re-directed to the correct page.
-                                    </p>
-                                </div>
-
-                            </details>
+                    <li class="jobs__item">
+                        <div class="jobs__content">
+                            <h4 class="jobs__topic">
+                                UI/UX Designer
+                            </h4>
+                            <address class="jobs__text">
+                                Yokohama, Japan
+                            </address>
                         </div>
 
-                    </div>
-                </div>
+                        <a class="jobs__link" href="#">
+                            Apply
+                        </a>
+                    </li>
+
+                    <li class="jobs__item">
+                        <div class="jobs__content">
+                            <h4 class="jobs__topic">
+                                Blog Content Copywriter
+                            </h4>
+                            <address class="jobs__text">
+                                New York, United States
+                            </address>
+                        </div>
+
+                        <a class="jobs__link" href="#">
+                            Apply
+                        </a>
+                    </li>
+
+                    <li class="jobs__item">
+                        <div class="jobs__content">
+                            <h4 class="jobs__topic">
+                                Graphic Designer
+                            </h4>
+                            <address class="jobs__text">
+                                New York, United States
+                            </address>
+                        </div>
+
+                        <a class="jobs__link" href="#">
+                            Apply
+                        </a>
+                    </li>
+
+                    <li class="jobs__item">
+                        <div class="jobs__content">
+                            <h4 class="jobs__topic">
+                                Fleet Supervisor
+                            </h4>
+                            <address class="jobs__text">
+                                Jakarta, Indonesia
+                            </address>
+                        </div>
+
+                        <a class="jobs__link" href="#">
+                            Apply
+                        </a>
+                    </li>
+
+                    <li class="jobs__item">
+                        <div class="jobs__content">
+                            <h4 class="jobs__topic">
+                                UX Analyst
+                            </h4>
+                            <address class="jobs__text">
+                                London, United Kingdom
+                            </address>
+                        </div>
+
+                        <a class="jobs__link" href="#">
+                            Apply
+                        </a>
+                    </li>
+
+                </ul>
             </div>
         </section>
+
+        <!-- jobs section finish  -->
+
 
     </main>
 
@@ -299,7 +300,7 @@
                                 fill="CurrentColor" /></svg></a>
 
                     <ul class="site-footer__list">
-                        <li class="site-footer__item"><a href="" class="site-footer__link">About</a>
+                        <li class="site-footer__item"><a href="./about.html" class="site-footer__link">About</a>
                         </li>
                         <li class="site-footer__item"><a href="" class="site-footer__link">Location</a>
                         </li>
