--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </li>
 
             <li class="sitenav__item">
-              <a class="sitenav__link" href="#">
+              <a class="sitenav__link" href="./careers.html">
                 Careers
               </a>
             </li>
@@ -191,7 +191,7 @@
             </div>
             <div class="info__img-box info__img-box--easy">
               <img class="info__img" src="./images/home-easy.png" width="445" height="445"
-                alt="boy looking at his phone" srcset="./images/home-easy.png 1x, ./images/home-easy@2x.png 2x" >
+                alt="boy looking at his phone" srcset="./images/home-easy.png 1x, ./images/home-easy@2x.png 2x">
             </div>
           </li>
 
@@ -216,7 +216,7 @@
             </div>
             <div class="info__img-box info__img-box--coming">
               <img class="info__img" src="./images/home-coming.png" width="445" height="445"
-                alt="boy looking at his phone" srcset="./images/home-coming.png 1x, ./images/home-coming@2x.png 2x" >
+                alt="boy looking at his phone" srcset="./images/home-coming.png 1x, ./images/home-coming@2x.png 2x">
             </div>
           </li>
 
@@ -241,7 +241,7 @@
             </div>
             <div class="info__img-box info__img-box--money">
               <img class="info__img" src="./images/home-money.png" width="445" height="445"
-                alt="boy looking at his phone" srcset="./images/home-money.png 1x, ./images/home-money@2x.png 2x" >
+                alt="boy looking at his phone" srcset="./images/home-money.png 1x, ./images/home-money@2x.png 2x">
             </div>
           </li>
 
@@ -293,7 +293,7 @@
             </li>
             <li class="site-footer__item"><a href="" class="site-footer__link">Location</a>
             </li>
-            <li class="site-footer__item"><a href="" class="site-footer__link">Careers</a>
+            <li class="site-footer__item"><a href="./careers.html" class="site-footer__link">Careers</a>
             </li>
           </ul>
 
