Correct some mistakes

--- a/careers.html
+++ b/careers.html
@@ -80,7 +80,7 @@
 
         <section class="info info--care">
             <div class="container">
-                <div class="info__item info__item--easy">
+                <div class="info__item info__item--care">
                     <div class="info__item-box">
                         <h2 class="info__topic">
                             <a class="info__link" href="#">
