finish done project

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                         </li>
 
                         <li class="sitenav__item">
-                            <a class="sitenav__link" href="#">
+                            <a class="sitenav__link" href="./location.html">
                                 Location
                             </a>
                         </li>
@@ -301,20 +301,20 @@
                     <ul class="site-footer__list">
                         <li class="site-footer__item"><a href="" class="site-footer__link">About</a>
                         </li>
-                        <li class="site-footer__item"><a href="" class="site-footer__link">Location</a>
+                        <li class="site-footer__item"><a href="./location.html" class="site-footer__link">Location</a>
                         </li>
                         <li class="site-footer__item"><a href="./careers.html" class="site-footer__link">Careers</a>
                         </li>
                     </ul>
 
                     <ul class="site-footer__social">
-                        <li class="site-footer__socialitem"><a href="" class="site-footer__sociallink"><img
+                        <li class="site-footer__socialitem"><a href="#" class="site-footer__sociallink"><img
                                     src="./images/facebook-yellow.svg" alt="facebook icon"></a>
                         </li>
-                        <li class="site-footer__socialitem"><a href="" class="site-footer__sociallink"><img
+                        <li class="site-footer__socialitem"><a href="#" class="site-footer__sociallink"><img
                                     src="./images/twiiter-yellow.svg" alt="twitter icon"></a>
                         </li>
-                        <li class="site-footer__socialitem"><a href="" class="site-footer__sociallink"><img
+                        <li class="site-footer__socialitem"><a href="#" class="site-footer__sociallink"><img
                                     src="./images/instagram-yellow.svg" alt="instagram icon"></a>
                         </li>
                     </ul>
