--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scoot Project</title>
   <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
-  <link rel="stylesheet" href="./css/main.css">
-  <!-- <link rel="stylesheet" href="./css/main.min.css"> -->
+  <!-- <link rel="stylesheet" href="./css/main.css"> -->
+  <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
             </li>
 
             <li class="sitenav__item">
-              <a class="sitenav__link" href="#">
+              <a class="sitenav__link" href="./location.html">
                 Location
               </a>
             </li>
@@ -291,20 +291,20 @@
           <ul class="site-footer__list">
             <li class="site-footer__item"><a href="./about.html" class="site-footer__link">About</a>
             </li>
-            <li class="site-footer__item"><a href="" class="site-footer__link">Location</a>
+            <li class="site-footer__item"><a href="./location.html" class="site-footer__link">Location</a>
             </li>
             <li class="site-footer__item"><a href="./careers.html" class="site-footer__link">Careers</a>
             </li>
           </ul>
 
           <ul class="site-footer__social">
-            <li class="site-footer__socialitem"><a href="" class="site-footer__sociallink"><img
+            <li class="site-footer__socialitem"><a href="#" class="site-footer__sociallink"><img
                   src="./images/facebook-yellow.svg"></a>
             </li>
-            <li class="site-footer__socialitem"><a href="" class="site-footer__sociallink"><img
+            <li class="site-footer__socialitem"><a href="#" class="site-footer__sociallink"><img
                   src="./images/twiiter-yellow.svg"></a>
             </li>
-            <li class="site-footer__socialitem"><a href="" class="site-footer__sociallink"><img
+            <li class="site-footer__socialitem"><a href="#" class="site-footer__sociallink"><img
                   src="./images/instagram-yellow.svg"></a>
             </li>
           </ul>
